--- a/PowerApp/Src/Home.fx.yaml
+++ b/PowerApp/Src/Home.fx.yaml
@@ -150,7 +150,7 @@ Home As screen:
                 Height: =53
                 Image: ='5261261'
                 OnSelect: |-
-                    =Launch("https://projects.sammcnab.co.uk/")
+                    =Launch("https://app.lapentor.com/sphere/uwl-simulation-centre-london")
                 Width: =49
                 X: =4
                 Y: =4
@@ -161,7 +161,7 @@ Home As screen:
                 Color: =RGBA(255, 255, 255, 1)
                 Height: =53
                 OnSelect: |-
-                    =Launch("https://projects.sammcnab.co.uk/")
+                    =Launch("https://app.lapentor.com/sphere/uwl-simulation-centre-london")
                 Text: ="Simulation Centre 360 Tour (LON)"
                 Width: =323
                 X: =53
@@ -180,7 +180,7 @@ Home As screen:
                 Height: =53
                 Image: ='5261261'
                 OnSelect: |-
-                    =Launch("https://projects.sammcnab.co.uk/")
+                    =Launch("https://app.lapentor.com/sphere/uwl-simulation-centre-reading")
                 Width: =49
                 X: =4
                 Y: =4
@@ -191,7 +191,7 @@ Home As screen:
                 Color: =RGBA(255, 255, 255, 1)
                 Height: =53
                 OnSelect: |-
-                    =Launch("https://projects.sammcnab.co.uk/")
+                    =Launch("https://app.lapentor.com/sphere/uwl-simulation-centre-reading")
                 Text: ="Simulation Centre 360 Tour (REA)"
                 Width: =323
                 X: =53
